Added: 1) shift cipher algorithm 2) refactor by using strategy pattern ;-)